log/build_2024-05-13_22-22-47/leg_dector/stderr.log
  File "/home/airlab/Desktop/project_ws/install/leg_dector/lib/python3.8/site-packages/leg_dector/leg_detection.py", line 58
    ys = ranges * np.sin(angles)10
                                ^
SyntaxError: invalid syntax

